samples/_failures_safe/1761694372_805206_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78818785.c: In function ‘main’:
./samples/SAFE/__tmp_78818785.c:144:13: error: expected ‘;’ at end of input
  144 |         line
      |             ^
      |             ;
./samples/SAFE/__tmp_78818785.c:144:9: error: expected declaration or statement at end of input
  144 |         line
      |         ^~~~
./samples/SAFE/__tmp_78818785.c:144:9: error: expected declaration or statement at end of input
